--- a/css/certificate.css
+++ b/css/certificate.css
@@ -12,17 +12,16 @@
     margin: 350px;
 }
 .container {
+    z-index: 1;
      width: 800px; 
-     height: 1000px;
-    position: relative;
+     height:1000px;
+    background-repeat: no-repeat;
+    background-size: cover;
     background-image: url(../images/lightimage.jpg);
     
-
-    
+   
     /* align-items: center; */ 
- 
-
-}
+ }
 .inner {
     
      display: flex;
@@ -30,6 +29,16 @@
      
     
 }
+
+#wave {
+    z-index: 2;
+    position: relative;
+    height: 70px;
+    width: 800px;
+    background: #e0efe3;
+  }
+
+
 .a {
     text-align: center;
     color: red;
@@ -154,6 +163,7 @@
 }
  .o {
     padding-left: 50%;
+    float:right;
     margin:0;
     /* font-size: 20px; */
     /* position: fixed; */
